--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
 </head>
 <body>
       
+      <header>
+            <div class="main">
+                  <nav>
+                        <h2 class="web-name">G3 Architect</h2>
+                        <ul>
+                              <li><a href="#">Home</a></li>
+                              <li><a href="#">About</a></li>
+                              <li><a href="#">Contact</a></li>
+                              <li><a href="#">Login</a></li>
+                        </ul>
+                  </nav>
+                  <div class="header-content">
+                        <h1 class="header-heading">Brand New Group of Architect</h1>
+                        <p class="header-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        <button class="primary">Explore More</button>
+                  </div>
+                  <img src="images/banner.png" alt="">
+            </div>
+      </header>
+
 </body>
 </html>
