--- a/index.html
+++ b/index.html
@@ -20,13 +20,31 @@
                         </ul>
                   </nav>
                   <div class="header-content">
-                        <h1 class="header-heading">Brand New Group of Architect</h1>
+                        <h1 class="header-heading">Brand New Group of <br> Architect</h1>
                         <p class="header-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                         <button class="primary">Explore More</button>
                   </div>
                   <img src="images/banner.png" alt="">
             </div>
       </header>
+
+            <!-- ------featured section------ -->
+
+      <section id="feature">
+            <div class="feature-main">
+                  <div class="feature-left">
+                        <img src="images/team1.png" alt="">
+                        <img src="images/team2.png" alt="">
+                        <img src="images/team3.png" alt="">
+                        <img src="images/team4.png" alt="">
+                  </div>
+                  <div class="feature-right">
+                        <h1 class="featured-heading">Quick list <b>of Our</b> <span>Features</span></h1>
+                        <p class="feature-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        <button class="primary">Explore More</button>
+                  </div>
+            </div>
+      </section>
 
 </body>
 </html>
