--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                         <img src="images/team4.png" alt="">
                   </div>
                   <div class="feature-right">
-                        <h1 class="featured-heading">Quick list <b>of Our</b> <span>Features</span></h1>
-                        <p class="feature-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        <h1 class="featured-heading">Quick list <b>of Our</b> <br> <span>Features</span></h1>
+                        <p class="feature-paragraph">There are many variatiouns of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                         <button class="primary">Explore More</button>
                   </div>
             </div>
